--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:gX9NKjR/,iv:gmN1j7XEjnNjQgpfeZPlgroSIYHYdfLpHMlx1wTQvDg=,tag:0oPcNjssmoGZbm1mMjof0g==,type:str]
-ansible_user: ENC[AES256_GCM,data:daO2ntm5,iv:oKfyv+qAozAWSb3ZdMBHQvb3tWbUW5V13FR5krhbztg=,tag:MosCDCrYxy/1ebHNXNENWg==,type:str]
+kind: ENC[AES256_GCM,data:UoIrY6q5,iv:qc3sqn8N5O2HLG+cKKCH7UxLsZ1KTOGFGpJMnbvspgY=,tag:ztK96ptpBhJiOA+vsUpefg==,type:str]
+ansible_user: ENC[AES256_GCM,data:m2cxL2vH,iv:MRTm5B9vrezek6FjFp2CYS/gM/3z2ENZtV1pTnRcfNw=,tag:ISoV8I8L7fgAnJxEvPKldQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2bjcrMGhNNnMxQ2M4bmZC
-            WFFtcmpwdy9DcWt6ZytPOUFzdUJaNVE1anprCjgvZmZ1ajFndno3TTdNMUZKdkg2
-            UkR0S3EvM05ZUDlFaE9sajEyemoxWGMKLS0tIC9aZXBmTnIxUE5JM1VBYnRwTHNz
-            OXVWRmtUNVh3MkF1UW5HZGxHYUcxNHMK9Gf6n8gUxgm5nW7SllMT+Wo0G2y9WtyJ
-            Pf041QodUY6NqGAodFyottZe+Nr77JUdNiXghSM9l45BDc2yHEn7aA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIMEg2ZUlWNFArV3JEUHRi
+            L2NEeHdzS29pVllLRFk1ZmxQWStNYVZqRWdrCkNjaXIwMXZIemIxb1djZUZGWXF5
+            b0VmeTh1SWRoZjlRT1dRR2x5bFNzTnMKLS0tIERkT0tkcHRWS0IycVQwelMzVWRZ
+            bEY5ZGNEc3RicFM5WVVoYWxlT2YwSXcK9Dsxt32wIlUs+FajCAVs4eVGydBIAOBv
+            ZnOaH9Z38Wr1cQ5v1hmgN9RyswNrA7jctm9A0Zj5gVLMmRFixnM/yg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:JLq49nIizDBIka1A8yjOCjcYkV1oRft8v30W5kFBW1M1WpcyiK5Qz0PlO2wIKAZe848zmFdhVkbZPWthRyRQrBE2lvZRcIDXKShGhJEQqAzTpFKSUz1v/r9IxXtk11pjX6yHFQ3vgqaOK+1ZjIlwasXW3kGzrNSdHsfMMGeU5xw=,iv:VA2Nqs9WxNtKqS8IPI2LQDkA0GDyLDq8vLYk5HLfcNg=,tag:SqniCYYhh9V93G+86prAcg==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:z+Ej9XBbi30tvS9+8kWW1xWRbpAxRPillZ7wSzG2snmNNOBE76FUsw4Ts/QxU5pgUf3p5Rs2PsqjMSAIo+IrNU3F5GzIFYQ/gpj/VpaGpsCVyd9LNBLzBMKLSVpsEtkiklMuUyIUP7oKs9gHaMba+09LdNu+xUQ3hSDOr+jNqmA=,iv:ZwkpoQjRs1sJo8F+cHB5atXquM9KQiRvkkMNZGUWuIg=,tag:B7s67d9eGAS8hB1kRXWPNA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
