--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:cCeFlmXv,iv:gERaKiUlV6CxbC9y6SmpdINlq/ocL09LB3MCcZkdqCE=,tag:ob8OKhXaxSS+P/XyGnibyg==,type:str]
-ansible_user: ENC[AES256_GCM,data:JkqIN7vt,iv:wBthtCqFrnQjzDWRY/CT3selLUq7sOM4DFTfsfiwdHQ=,tag:kTPYgXGq5NBeRfOyxXPErw==,type:str]
+kind: ENC[AES256_GCM,data:DH81jdQz,iv:0AGyYFaqTvPeAXM+Is8v2KDrhHvtC7GSMVjzf1KihZc=,tag:2ieFnl8iNYZvTxNk03iIXQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:hWPLmhAb,iv:vGL10OLGqnZtKgmHPijLBVOcD5KclH8D40uOXQvmx6s=,tag:foX+W5oC/l/ZVjTbLIuy0A==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIT0FMMFh5R2wxK2c5Z3Zy
-            M2s0Qk9zMGhrLzg3RWhBb2ZJWHpHMFdOYkVjClV0bGVLVGsxcE5HTlp2OVNxbmxJ
-            U1R2N0s5ZkcxamUxUmh3T3ovVElEaGcKLS0tIDNYZEhnbzZydFpXMHBZbzNtN0lN
-            Z2pZM0x4UjR5Q280eUdzWmx0aFl3a0kKMeFOk7g0zwbMuI49KIsM27Pwdhbm51ed
-            0fmE89FV7B3AHYWSj0M8B1nRHyvVGEAZcOEIf8GzG9DIHyQTws5o1Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBURWtYRHZrYXdxenNJVDRX
+            MnhOYWQ1TEZ4REFUWERKUkowcHc0cHV5ZlFJCkFwS0pIV2YzbytOM0p0UWZDN1BF
+            L0NtdjNsRzdqeVhnSVV0OCtFZUo3SFkKLS0tIEZ5eVh5ejR2TmRITng5UXEvZWY4
+            Z0Z1dU5rZjRwUHliN2M2YlhDU0ZJNU0KE6I9KnzJ5VlmU0SXV/w0MfBoGhWr0HJM
+            BQEc9yGJoX1/tWAcYKOfZM6gRD1rHZda4FawRIXxgy+ko60hbktrWg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:Hogp86J16l7AAYbXI6thQ7oIxOInY2S5S1sQlYbUVBq+cu6yzO1XoZl2wgBuaWJk7G6QMV5efYClGAb35J/iaQi1LXT+CHzHdGcrR6Xfo6ZD9ruNNxdIix+5zTZcqx+4TcXqTuOTQI8GJIHYBz7ef1TxDIFOwBzo3Ca7REpuktw=,iv:hxls2EaA6hy4Z4QiF2kJo8NkdV9x2ctixWt7dRayWN8=,tag:3u4iKUedH67eTDY84K9k1Q==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:aZSKu4wcUUN5tdi13lVawFXgcQO42ays+WnVfUu50IbSKisu0xNN0uZ0DEsrAe0fMSlh7ILD6Ho8Dkoug2CkW067yYiJgCSug8mhrS7sF21GvFBSKC9BJzzhfkwI14jxaN6QsNroit+gcyeR50+V3S34Aqau+RJfs6Q7e9rnX2U=,iv:MCinXnlwRpyD8htHXDmN0TvX+QojbfVXBavVoj2XFkc=,tag:qXwrTxQ+/NpblU0Lz3gGJQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
