--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:WvulWP65,iv:Lz/xAISfga0heljlW8xo4qYXl8TxQ81pXaQpUz0qVVg=,tag:6kC+VR2qpLZ/eJguMz/Wfw==,type:str]
-ansible_user: ENC[AES256_GCM,data:KNCFzkXT,iv:+9j9yZxGJxXLOuZnaRrUTZ0yM5bKhVvE+hy2nqdv7EQ=,tag:+LDgIgmYMkgNQyKN/Fv8cw==,type:str]
+kind: ENC[AES256_GCM,data:fN7+7rxw,iv:YXuTCmHqqCT7xMO9arRFx3fuyubnhXEj4qtoq3VDaYE=,tag:pXTYDJfXzWTvOdmNhgWoFg==,type:str]
+ansible_user: ENC[AES256_GCM,data:mc1LTJlK,iv:rivIpe1WYwBcSSYEcxBwIS+zoOllK29qkHzFSSHzehg=,tag:fhQVatTA7gCl5xhLMieidA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhY1gxeXhrc2RKTkZrYk5N
-            UnRNNjI0a2VTak9LN05WeXF0NDBWWW1oVnhjCjFtdmZPTWNjOTdMVnJmd3pyRlpa
-            dk1STUsxSGhXcDUzc0dxWGVkTmRBOHcKLS0tIDZSMlN0MWk3TDVXOHduU1Vwb05Y
-            YVdtRDhBVzVEQjRtVG1pQUpDSTl5MFkKVMWYdEMjhdu7CLqSMbFkYSUmB8y8PhM6
-            yMUJSRbYgzMlubPBIOtk72be2M9H9GVZKHVjnZOO9z4I4XbXRxYHzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Q2E0cHpZN25kYmNUbGtD
+            dzB6V1d6TXpUNVFjU3hUaWgvalpDRHBKWTNNCldOUm1xK1NsSDVmVjJyQzg5UHJy
+            UlpVS3MrSlZFTVRubGhpTWlMa1FaQ1UKLS0tIDZNOFY2ZFVjL2h4c1owUjhDQkYx
+            dmxYNHdnQ2JrWHJTMGl3cXVZbnZoZTAKz7jcghde9KfWBc+iR21N75gCXZE61b7C
+            E/Et1zoYb+nRlkLp+i1rV3E66yIBGm1xw8gK0D/ZlMk7EDKKsGdQ9g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:hZc775oZfBfUrxVR9l8bQdJT/MwFn+k4kHwUm0iLCWZQ9PMjfPMiE4KWYML5nX5yzeqcQAGS8Jbp5IhiBE+wQ1NvVCh4pGAxj9W/AtWQEfc6RDs/IFgIUetujW9QkDlFmjqrShs01Ozy06Lcq7WGyXT9PxLHYg1I2JeV5jGtBhM=,iv:oOpWRe6iMGvoVjG4rkX1k1aER4w8fUmRJmgoK0XCJgc=,tag:H00sECBJPR8EwYtDPzYuSw==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:nItvhptviBoEvcXJ4xI/gQdNkrpzA9aD5Ph+UlQmBcdLfw+N+qDT0dK9oksYEMxBkhvpaT4ujTGNq194cn4WN1TnKDzG7FGFuZ+g1azLNXVfzaaajuh0JMAonKhPi8VVX4UW6zhlxWVS0PTqgnaCF/x33zMmJQC4POF2BwHrghY=,iv:+aspkBIF7WD92HwJ+2gfgzuaCRz8QajLHhNEYbvFerY=,tag:Yqlsvdyqhpu90fpP8MTByg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
