--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:mrDYZynbuN54OpacZXqeNhflC8+R,iv:QRV3033rzOLzol2gcuBPS+gXi0Md0AUIbr/USNBXRNQ=,tag:2pSnb/DIAlHjR3+7McmbqQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:ZEJFQowK6vMKVdydtdPy45byyummeRx4TKfNOo31UVT8Yjttjg==,iv:8wKfdTqwTcmgpaJk+Wn808qtytrUZKmYYhIvXsFqxfc=,tag:M3pAW9SoMdVZ0YPskaYwHw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:onH87M1jkPz4sBo=,iv:JKvkZtGs05T77vVG7t72b1YAPztTgMIXsQxJ0uTwBY0=,tag:P53+YVITJn5F6DcAJKiNtQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ZC/AKV98zhXhU3egT6LLOXoRsOF0,iv:UDAk1rPMMM8HqMn8Dels6h7avcnd2WPc3Dgh4LB4wZg=,tag:FnMInq6+MaR11BtW2Tev+A==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:hgPNpVPojamGUpJAP8vIxEXzg2+Z7nP6qjo7qZR4fqQY0V51Iw==,iv:vlX4ciih9cLzBEm+uEsAnH343B/qbE9kH5D9SwKkqYE=,tag:9vdocws/oZgREBPESBRD2w==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:aecu1tYRF2AYuCE=,iv:9p3uX3yTFavs4bsUf8iA+2j29uEfs+W5pGLQgeE6GXs=,tag:5760Z7S2BH6XdzXO3nHBUA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmaTRuU1RaMXhaekhWb0NM
-            ak0rMy82RXl5ZXY5bzJ5UjRIUGs3dnJDSnp3CjhRdkJWckRDZVVCOEZPdlE0YktH
-            ejdyZ1FGbTNoYkxzYjM5Q2dwU3MwUEEKLS0tIGFWVndKU2pJZmpVajMrUFZpRkow
-            aHcrb3d6Mk50dGJzbVdHVzNJVGFGRm8KJYvwmXYqpVAbpyhvf4n9DpW6hglJz/kR
-            f+eLm0JR2BQolpfT23gaaxxwDnjIlLPyDkFgfPT+tkptmSnoxakEGQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrN1dEK1ZwN3N3WG01c3dT
+            NmlwZkRlN25IaWdTVDhNRVJZZkQvNzFCaVN3ClpFeHJZNEcwTGxObWE1S1dXYmRG
+            STRZUDV4VG9EWUd5YVE5ZGhLdy9POTAKLS0tIEMzZzJ1dm1LLytTd296RStJTzBX
+            TGhtMWtJeTNJMlBDZkxYMDYrUzJLVG8Kzxf7ADvOHtjACwgyS3YmiJwxHWLE5zZH
+            eyT8CHGkPqAsATOlVA/xsT1Cr8861Ko9NIhsnFPOZLPSg+JC5No5XQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:P1pwBAsmYNyvaJ2g8H9yam2/vdU6CzNOzxSrSFwZlEMxG/HNqPzBJJ27zXwUVMI7NT/XHQnn8VQKJgi3bcZsVV4eggJZuSP9prrcy2wZPauyI+FLZsptXnl9zc/ZgelAO7rNAVeQCfJpOs88qLaGvzum1tFR+bseaX6BHgv7gyI=,iv:/qDmRP67IcDMOUbsIV6BWovCu0oTGUvQwUo0MrCVX1o=,tag:O375OWpUBTDism5XiSQrCw==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:ZCtoHsIk1Pcbgi029yXH1sZERwSD3JIS47V4Tl3V/ytZ9K+Z2V5Vwvs8uABrmCiatdqrUOe2wH8a6UZ2oeQ4HkNx7YL98Tg9NbGgVnPEcaaPb/J+nLJUYCzVb4SJHlT/uZ7Shxmsdh/gnpFQLL6KHVbdovpcfc+5wA7RwTd1Qwo=,iv:6xUm2TITOUFAvH+P9Q+DMphSzr04puvpwnRV2oQwfZE=,tag:DluWhSDJWrMe/3uMYFaWdA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
