--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:cyx4jbbb4OH0V4o=,iv:zlIyeZqkJ3FJRez4Y33nIrONwPDO3IBL8eZRbiB+oI4=,tag:13Jw9SekEpCwkXvtoyg+Ig==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:8P6WpQ3l9KsO6CCfdha6TWZ24/ji,iv:GsPwnikg9cbv9qUkVLTPeWVU4rukjpPu8X2vj8bNb2Y=,tag:6AmzyTIfjVmS1DepLtB5OA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:KWMiiNmAHsXvvV+/rP3VvO6FS2QvlvJGsRck4zZt9oCYJg703VP8xqn35+TjYotyluc/tG0psq9C4Nsu7N2ULcQpRteH6RU=,iv:zRRfVxD/yRnLNQ2YbarnKGrf6zM8Nkj5PY+cj5XcT8s=,tag:jVyYZlAq+MwMbZTMGpV3CQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:fRlhcIOCNrM5QmJau/m6TpayWBCJV+wETRNHXovukYht5rY=,iv:TdDt1MjHO/YdLmVmDvc/51qjXkg9wUzjDth94X7Gbsw=,tag:ZaEYAEr43ZfJEMs5vtipnw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:J9m2reNpqvhGUTSy37A2pwEUIg==,iv:12Qbg/uyP8cYevPT3OHS+q4lAGN+K8+x/QQmA8zN0G8=,tag:7IoLd4knahVGI1cHIpnpEA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:ov0EK1V8o8cs14QcKSdUfi4QNqXW,iv:hO9YgiVC1Ct4wHAqXaYJ08BRnCK93kWFlOfILf2e5Ic=,tag:V0R+ApuLRuJzANBgr633Sg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:qQY/6YcyXp8=,iv:GYU9PHqJ1V877hT2SmCvFi7G4P5Cx98Pi3HGHg7OMXM=,tag:6PQdo4ixH8hirRmhYeTGSA==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:bsWW6+xDejU=,iv:Kds2U7g42rc/YbpRbsh46uiRZtpi2FnCVq3XiTcxQ9k=,tag:GRhJLLjGZYHBM+dNAUpADg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:un/z3mAVPUnY6b1LEpFZFz1ySWAEawXkngEoqcNy5+VbYkoEX8/50TF87VQjID/TC//ZPv5JbJti7fFpFmbkeA==,iv:ng2kYZJGuGT0s/7k55UzVRlTMn5tSg7a5MPbThTUhgg=,tag:a+pJdcHF7hHV+ba0/C1qnQ==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:DUO+Rgb8+C7gnbBykLsGy60GyNKrC4fMDFnss5sDohHaGj5t5nxJx9oFVeWHO1xVN+GkC0eU10kXjqGQfY5mpg==,iv:9JCkcsj5X80i3o4sr/wLlQF7Emzxfn1JRnajy4grvhI=,tag:Cuwf02o8fUbpXTgCh7ic/Q==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:byS42i9gKMFq,iv:s/7TLV6zgEEmeSnmiZTXVywVWszz6/h2pMsKdTzW50U=,tag:XF2zhTdU29HrXb8PVqSFxA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:iBblycixObSPvDVRhiBm,iv:C5HxfimsY8iy0VOo+Z2smfVJv4PLtRQ4E1YP5lllfD0=,tag:Jc/j0EKU9cOSVgEZJJpWlA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:GiuqmVQ6uPbyE4jBwsPxTWYKip4uZpGrfRDG+uuW4ES+z3luok7OEe5pWVhpR5fmg/k=,iv:wP5V37zs/e+g4Vhv592y37XQkE4qkCJFbEFgFXzc/bg=,tag:rtv3yZ/GeF75Ayki/obw4Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:CjmonEucypHTctZvCIA=,iv:mN6SIkpKQSy8Fcxm3MB748XXO/0UI8IT6mm/oZGTp8w=,tag:5v3TNFnsgCwLHy9V4f4J8w==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:TIrUaBvO1fr4RJVgEYlPfYx/tGU=,iv:35jRCU/33kCinGfdk+b9rYGU0Di3MyhM8Vnq6810z+A=,tag:qqbexl6MV9T4svlhWdSJaA==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:exjAQW/y+a0=,iv:fjfsZzZOOf5vSL9EoK1x/Vimffhn5EUJmprE4TaCLmU=,tag:0HsQPGpKTdrS/iDQBRodMQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:ky9PJWMryT1ScVjrY4MDydmD42msVSdWpp/uzszOJKLYHDEsHL4=,iv:PfV5Mft5UVSrbnKAN+vUtphUn9FFMtkRZtcyxIIoJVw=,tag:0bDViGBRTn/db9o4rY3dkg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:6qUgjRtqGrY=,iv:j2o+fq2merNqBQfw68W+Fmpz/bs3YR2KDRAQfl+2MYs=,tag:P9SG2YsSEnDRj34NtmvL4Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:JeTn6l4aOMmR,iv:66wH5d9H5U0U8odiFuZKrb2eIqDPWyt+f556pAYtMvc=,tag:jtPNMCxeqtLiQOs7KHZRzQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:k2bLy0ZMGg==,iv:7B7zQUZwgqhGQ+yF4YSHjmGOg4J33IoACS7GNtoViM4=,tag:7WsrHvLDpvfRGbubZr6JYg==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:zMf7BiTIeM5v,iv:/kVtKEMLBWqKsXE127C37grdTb1QUtNnci4hdz8xd14=,tag:g7K8nVa+7cM/nZd/NNEX3g==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:/5lH4s20PuzSe/U=,iv:ZhYLzssvM8ILUlePDyuS2VRT8PIVTg4epyXvtVcjauo=,tag:yWJYqoWVNoU4kr6N2E0szw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:RpukfljeS1Ucpjk3iyYAgIf92zio,iv:LgODa+rWBnq3qQfd7Ds61LfIhEqaseNWhLKmWdqXMKA=,tag:SqxtowjOwFIfF4ib7uhatA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:tPbQeIk8+PJsbRYdAhJ3WcE9zpvGEoim3kVRs1BYVOznHjy0jJYrF5nAe61NVUEGBV/c76bqv0/6nznrf7SPqWJFqznDl90=,iv:xDgK+lvIVZocT16mSjx7qUWlSCDXPMvdu0K/vPK12qk=,tag:PM/DThyOFO/R0YCs5FYB/Q==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:qMMZaeC0nosS9pYrTBpk6XFb01bSFperxMUMQkMaIhBcu5o=,iv:UFI1VqxuO0p/AV517vLTwfu1YmTq69oI4mme0zpnH+0=,tag:Xzr9TqAncZSVsiO7ic3emw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:NAnx4UsiXeAKQQdsSDCS609R7A==,iv:EvNNhJQ79CK41wS0MvQMx3EEC0U0qdye1XaGoqiZyuw=,tag:8IThC7yCNeBeSN8wvlGCjQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:VYwFhBL0fXrGutYfc14j05y3ui2m,iv:zd98NMgM6r7BuWqDb+TmLsM0goObVUwUHV3RkzOtYNk=,tag:T1l7sQT7CuK0tQyFgmSvaA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:pjIqpWMdzlE=,iv:fmDe8a6Frlh9v0NLiTAvFCUlJ+mksPR9hNGk3tIdB1o=,tag:oPM6dltS/sR3Ev5YyCz4kA==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:lyVHznY4dC4=,iv:KNyMa3vPxmAtuKsqO1zZ4/RgIR3niVmFRUMUJL6orNc=,tag:k+Hj3aJ1RjB4FE6sk2QbDg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:7W4VpVY2iHSSba/vKoNEhHg/nYCnbuNToOegMBpMlCFlK9E+ZTPdzn/BEo1uoM7EqJDwTNmgZZd9P0jVe4x8oQ==,iv:M84PiVPpBO7mv2FnJ6jeMWbcMGZ/+40IFWPKhv/2IMI=,tag:2DPNoBrTxBqqLowQKZr5tg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:HN3qOKdzgScuIetxrSXTbtZLY5Xzrxgv9scHVUNuDHDbN69sCCLuVaoV0II/lIGlFr/EB5WD/ZbAxgszuHJl5A==,iv:7buwzkuzFXJC6py4mDW/piznoC/fBOKVu6jMwuAII9I=,tag:gN2W+hP9EOYHq2ZMplnHaw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:bldi5d3T75Yl,iv:M5e3rWBMYOmlk50rcscxY/1ukyCp6LRS2DDlmMQ24gI=,tag:dwtrVWDH3jYMN/uxjEj4iA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:u+Vk6+MYk4io5PzPIBcZ,iv:AjF1lDVwx6Wmb3JtusN3MebaFlzmRuMqWBMnIh3Hu04=,tag:AkkYzpPRNLydaztjyCy4ww==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:+j34lSVUvog9FKDJ9/+9ocB2IRALDpkuAwodG/NA7dAIrE1vM9PWUZ1A4CIIsa7Z7mU=,iv:fjrNylr0AtE4dAxgpYi2aoMBi/Czg9+X9TUX/pJYq48=,tag:i9PpWlWrMn7DeIdEiBqBwA==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:Ro+UBWXzWJcEU20xZkY=,iv:zv+MaRq/u0Q32frD3NMpGqbZVQCA+Swl5UukaerryT0=,tag:vSnCL53RW3AMn/C+xDuJdw==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:4VvDc62FKvnILlIwTqh64EKQ5OA=,iv:kfZ+XvjA8h+DWPXxvrr3ksyPiyRC8aFIVpsnhI7tS3c=,tag:wb4Hcv8uzB6c4b2HAq/o8A==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:hLKyQ0V8biE=,iv:ryFXn5Fq7c8iQaxEqH6Kw3iNgQXtt9cFv7JZ5CMWIQw=,tag:ch0zPRSFwaIVCpwhkX7ElQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:Iez57MBBoVFRetvhIDamjvus5docXvkWub1xTH1Ui1h6g9ngJw==,iv:Hd2RZuLJ7l7ehAODT6t4ADThKOs+6ppvL/hFORKh62g=,tag:gji95x/Ks7mPzKk0E3jpOw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:GBAs4nU8Ar8=,iv:D8bHvTv9en3rPwkdiJ6D80YREuTHPd8r1oBwwvQDur0=,tag:ifNotqzFqk9KEZbo0CBCQQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PLLN+PxL8aY8,iv:WDzJdapCXh/6DHWPsYR3fnI21KAmpmSk3He4447y8KQ=,tag:W1E6Hh39KEYUOakYrW4Ggw==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:68KLTBUpWQ==,iv:wWjjSRnp2EZS0uEyAnr1QG61qRxsKD2em5OI3ps46yE=,tag:mKL8hbv3bIrBdTNC8ShztA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:s5bJDcV9XW/R,iv:uZQ/1Mdpot1UIWWDZZ3h/h6F16CaahJAY4Ryu7HjqeU=,tag:xlEA4UbMRVEe7SIXhtg3gg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnaloyTnNpSFpWQmdtOVp0
-            Sm9RVE1ISEIwQ2tEdDZZVmlLNldraFVqbWg0CjBucC9tYXR0YWVsZS9UNU5EdkdQ
-            YUhOM2thdjVmcXZEY1Q3L2xvZ01JTTAKLS0tIGptdEs0blhVajU1TkVzL040a0VN
-            KzVVQWc3VlBqbkpCR1QxOFQvRWIvQkEKV08ccWuA8I3GjEGJsNzq0qozTpcz8s2W
-            6QdUpjAO4zqpLXaP2GBHnfUFNo5sf/UNt3LMIsUjJ6/c2W4x8KCZYA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWL2ZlR3ZHbGVoQUZieGFW
+            eVN1bDlpaUIvRUJEUFo2MGErYnBVbVpyd1NNCmk3MGM5QUlDdTk5Rk52dnRwVm5Q
+            bGlmamsvN25sTk95cWNnUVlpSVJKcFEKLS0tIDdXVnBWVHRWMnhYb2cvZFVJVXkv
+            emxubzREV2d3NDYrUWRsbE1JMkFnMTAK3wNaPGePuXtHIOEQrL7rLmeYQINOSmGm
+            3K803BaFjiNN3VPpt2rjRRLwCQ653wViF5hVoO96rHXGwocuGHi6sA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:39Z"
-    mac: ENC[AES256_GCM,data:+L5Lw2sGd/HlzCnxKXMN5MVAm9aL5AY+hWojuTjPvFMlTigwmYhLpg7PCPT4tF/ZBkWhHIrijqTPgyDMKNPYctsAkliTgHi4RIrDFgHan2UwZMF0ySgwRUkb9WJ8d/atHYNGYN2pc+e2KdxjDXz5j5Mv/7ZwGao4CtLXjzku2ss=,iv:d6q0Y3blqlRaq/3Rod4D6i/OIMqbkuoUaRmw/2KQRLM=,tag:1z53iYRfsE9BCoUZ+gbovA==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:ItPXYtO74lGI2U3xaLN2t5UPhWe6VLTTjvOBjd8//46CVWIVV9cyyRbsvGIju9geOxqpxfeBOfPyYXgeZOP/S4td5arb806PqKKpHWthc8gEL6KG1EeLaImQ3Fz7lgbJXstdE1PuyPZd07OJOzZPGQdGFK67VFMq6UeoaGAXNeU=,iv:f0kJ6QEtpUFXTKS7Yy/tWUJlRs87e8KyKtgvaXyZjvM=,tag:wvKVt/xK3DNyoSvdaEgkog==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
