--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:qbRN+GVY,iv:80b5lT+1wQdmFI2ifjGMMRrF4hDVDeAJH8UhMs99UrY=,tag:I2SpOMthNxNDnggO+xfC0w==,type:str]
-ansible_user: ENC[AES256_GCM,data:xpD00rB6,iv:lhXb8JNwlpfPhz35aPvN9QDtXEcFtPkLyc1TorLOQnY=,tag:TuodJ9t2/Kobi8IRDsWNXA==,type:str]
+kind: ENC[AES256_GCM,data:RM4cmAHz,iv:elWi+x2B2KIaq8FRLv2yWg2RzIIOH7dA/qJeSWcc79Y=,tag:VpV3jGuEBLY4+BtEnOm2nw==,type:str]
+ansible_user: ENC[AES256_GCM,data:nCouFPl0,iv:HVknYq+COVFOxXRWQBjSm0DbbnagCqNOJSUn8/A/HeA=,tag:5Q0YsiOvnFPonTjWAD0/Ng==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Q1NzN3owblZKam9mQlEv
-            c2FDRW9CYVpQV1hYQlZlUFpDZ2R6b1RlT25rCjIrU2lMQks0ZWdxSk5JRE5qWDhY
-            QW1PSE1idW1jb082c2RtckNhTWZLazgKLS0tIFJ0MG9teVAxOUxpNzV4Q2NrQzBr
-            TWNiMHZyeHEvUFNwY0VseWdOenFxU1EKBgmqAyEoGoKhvWHTRtiZEveLaohH0rvf
-            TcbcbDGKAN06jYlDQNIu5kfaneN2Et1D+wadRPpiyzOo7GKZgupOQA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArWHVXZkdsaGtpdjRRTTF3
+            aWJUM3ZPZW4rWUNka3B1dUtwZDBlQWJBQkFJCjlEZlJMcDc3TXlpNHRBazFkYmR6
+            QncxQXJBbVZJdHlYUnBrb1l1SXQxa2MKLS0tIGorVDA3VE9SWS81RFl0UzcrQmJQ
+            dHFpaVQ0WFFNaUtqR2dCcDN3RXltQmsKyaEzIE8oIq2661Ej1geaimUoZ13c+a5M
+            x3ag6aUKYqbyRogtxPX2psYyqQtDktCbwQg1/cROa66qymnUd6on5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:T5qD0xPfyHPzwJsB5/igTXJ2tMPDeKc6BLqxKFkZtuRzY/NC2KBgv808lUKQ4CogLch+hysZStcciyCstEMO1jKJ72LYFiqSYXdhj4CpcxC5FZq/G3X6ahHRqi2zbqeVegmA3IGRyQZMOrBNZx5SwsMBLJ2m2/INPsJW5kg+aF8=,iv:veK0XYRWEefn6m+yNf82zhpSHEA93EKfgRcI0IJ32xA=,tag:vd6U9pGMgEEZjcXX4chSqQ==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:ZGehrdtjBZ8IPTDVuqHGzcXumPJedW1eKfC+GpOJlEc8MQoatoQFRJSxtzokpdD0+lxvQxVGG+r3BviKR/M8MVhaKToOu7e8tM6GExJ7gLSEchMqsQb/lmTnstbl0xdg0RmJB4Edw2N64aSuwNWOuskaZHnDPtgK5/pQ2TBUzUc=,iv:9l89sOFRGTlwPQai9PRh60LyaxhkegzVpD+YHahqLSg=,tag:1UstwwP+5liSzHtizIr5zg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
