--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:eqfXx5DK,iv:QGKopZ05L1bNvxdPZDo2JB/uZ09/WDQPc4y6a4ixQrY=,tag:n9Auf6J6uGaAI58u+co3qA==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ci6OzyjJ,iv:vNAkD8+pA6slCYIN+9CK3Vp15bcUwT7C5aLTUtlQk9E=,tag:YwWQTw2Anr1bksh+OewkXg==,type:str]
+kind: ENC[AES256_GCM,data:63dXBVSx,iv:+hfEroIFGDbYO0DSI1zQJH4M7DPRxxfS9BXOVh73Wno=,tag:SsyBr8vXjXxdmzOlcSOuVQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:sP3+N1JR,iv:PvqNraPmSSrDU/s3BggXjAVz2CLXBmwTx1cj54cEl50=,tag:/ixhqSz3gZy8MMKXK4kWew==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4dkZmREVBSDhGSEZFck8z
-            aHdDVERwQlZSeW1yZWRicE9oS0VQTmNaM1hrCnRBWVJjc2dHMjliQlozYWJldFVW
-            V1poUmIrSG1PRmtBNGQ3YTE3ZHZBYVkKLS0tIGY0a01qZmpacG1zR0E5U1dGMGc3
-            dnhkblpJSFAzYjVLbU5PZndrNFFSQVEKo8kOxCskg4UfdzTf+y9XcV4czC+exKIk
-            Iwv6jhb8ciDknyMPys82zni5i2GLgvkjTy1brV57yTNADVc6bA63Nw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQ2VhME11d2Jaa0lNayt0
+            SStCYkg3RzRxdDMrRHk0NnE3K3ovTzhVTkQ4CjN6b1hFeUZBVUZUM2t1Y2FnZWtM
+            cW4vNWNEd3VmdndEeG1MOE92bS9abHMKLS0tIGFMOU9PaHBkK0FhVkFkZGRLZnpp
+            WHNScVdLcnZSWmlEa0FPR3pueTFnSGcK/28BG5xk7gIbv3qWooi3uFZ2VHFW+M7q
+            NNIu6B3XOgLR2mY2IqhGgYe5AQk0xuhCq2K5jFgyIeMW1UdLramQQw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:ewvsQ9aFFaG/v8svXfYA0igLe9PLxqt2PYI9yyu9EytF2x8HPy1EFhLIojjIL0dZXNwv7P5r63pI792UfHksOP94UrTIVWiTR+jPkDuO4WKb6Ao2ptepL23n0Cu20Pec36MmGwHxnP/1xcHipkT8lx9ZIyNPylQSqxPRI3YJkK4=,iv:t8oUARi1P+xROpjeySL+1/67Nna1nuDuZpbLbxA4dWc=,tag:h2iFmgnj9gZQXd6+X69zLg==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:2MQ0Jhq8YKt8AreHO+XwhiMFuQwQIqb5REzZ+U+TIkfeSbJ+VhfRh/hevQlh/MZA9DqJElfeu+7cRQOcEXkhSEuFFJK/R+m2V1/gEQSiaW8fn3YaHIcAJUeRIfTusR7+BvRaHIJebsJADzcfHXafJxV7LrTvLNsGYNNkU5JbuWI=,iv:TsoZ6xnm/IB/C3Mbj8NWIpMA+Grahtundsp0CppZucU=,tag:KDsmCPdLnfyinUV5h/uC9A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
