--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:tQT1jsrU,iv:+5KqcStKkhgzmLN9Q8RxEg3+GPvxwRK1gsTzRqWCYK0=,tag:X0FuubkjVanZ/J6XwuHZsQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:1tP1wjxk,iv:961umumHQJRngoGHYnlXD7kuyWXWmK1beSP5w0Noe4s=,tag:m5hBmw2S5XScN8mnU1xUnA==,type:str]
+kind: ENC[AES256_GCM,data:hc9iTYaH,iv:Cyh5/Iab5dq8OamLYuSEsfr9v5gmiszVtivC9W4o6L8=,tag:qoLBXqHvhPRLazW9UxyRHw==,type:str]
+ansible_user: ENC[AES256_GCM,data:Xse05I9d,iv:Ufe2o9MOmpH8vu+Sim6RBIe0v5e3BLekBbRPE6jhRus=,tag:JehX9zeEbEctbWe1XY1OWg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNU2JpZ2dwbURlSXlQY3FB
-            SlFZU202ckVtSGZ1dGE5MkhTWHhWZXlrMlJnClNrbkpnYndLQytRR1VvRDFveS9F
-            K0lUNnpjbHMxUW15YnNqVVJhWkNmeHcKLS0tIGV6ZTJLZDNINTlvaU91YStMQ0dK
-            QmpqUEo3V1RVSXc4azRCQ1dIb09xU2MKlRjexyjNGmv4DFcyCpaPzsj7sUu5MPYT
-            yy+Vs01wXefYoFUxROmtmrwh/o6PL+edSplyDSnEdelRisS0dXCTyA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoZ1huZ2lWaWQ2Wklpb21X
+            Mk5wcXBKVTVuOXEwOU5RQzZ6QkJ5enpCS2o0Cm0zU3JMU2FJWnV6aElEdEgrUklX
+            dWJzV0hsVVpud0dBUEwyby9RQ2c1K3cKLS0tIFNid1RSdm1TUVI4RkU0UUJZKzE2
+            L2Q0b2VEVWRJcHlHN0NGNktnQUZsUUEKREhywygSytqnprPi3rMb0i/XsoMjOzh3
+            OJyowd7ArrVIQaoifSQ11aNV2NToHJv15E3GYDo4r8RG68Sypz7rJQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:19:40Z"
-    mac: ENC[AES256_GCM,data:yMbPMvp1vCGioyfXzeqWHeznMSUJbYSiQzFMIT1OnidgbalEE98ofy+0FqgD+RYAk2ShOPx0hqAJaZ1pk7knNvjO87VMUkO0+PjSXv5e6pWrNuHYK9hOn0RkICey6iHBb02Vlgc+zwyajAhJSvjPYq04xoEo2jq1P6eWm9oVJNA=,iv:m038Hib87Zod3hjf23wITKBv3thJ8L1VQMguLgjYxS8=,tag:ZHVnqGf+8dhRRxHIP5uLcg==,type:str]
+    lastmodified: "2023-02-18T17:24:19Z"
+    mac: ENC[AES256_GCM,data:KOHN2AKTd5yRLepZiFx1aHBK0Eetql36EyalNwb/a1eZkvF3DLOV0Zvr9mlRH0A1M/Z5L0Yt1eO9zf8zwBAuC5lrRtaYpeBoHuvT7L3/nyNwmCKxWuRhxIgv5m6R0sTkYV98PsEuQQs7XN1MZieWrwM/xq43rMXgvzDxHxDv0sk=,iv:e+TPbP+gCYL+z8XQWJbKi8mlTaGJPGnWu5b8W2wC84o=,tag:f+zEfpIZQ1Jh2IMrm5/A/g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
